# linkify

./: .gitignore  .projectile  Cargo.toml  Dockerfile  README.org  linkify.org
etc/: litestream.yml
etc/cont-init.d/: 00-litestream
etc/services.d/linkify/: finish  run
extensions/: linkify.crx
extensions/chrome/: background.html  background.js  injected.js  linkify.js  manifest.json  modal.css  modal.html  popup.html  popup.js  selector.css  selector.html
helm/linkify/: Chart.yaml  values.yaml
helm/linkify/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  serviceaccount.yaml
helm/linkify/templates/tests/: test-connection.yaml
k8s/linkify/: values.yaml
k8s/linkify/templates/: deployment.yaml  secret.yaml  service.yaml
resources/db/migrations/: V20200208153153__create_migrations_schema.sql  V20200209002531__create_base_schema.sql  V20200211002531__add_users.sql  V20200325213634__add_queries_table.sql  V20200325213634__add_searches_table.sql  V20210421000612__add_versioning.sql
src/: cli.yml  config.rs  db.rs  main.rs  query.rs  utils.rs
src/auth/: mod.rs
src/db/: migrations.rs  mod.rs  query.rs
src/link/: mod.rs
src/server/: handlers.rs  json.rs  mod.rs  request.rs  response.rs  server.rs
src/user/: mod.rs
src/vault/: auth.rs  link.rs  migrations.rs  mod.rs  search.rs  stored_query.rs  tags.rs  user.rs  vault.rs
