[package]
name = "linkify"
version = "0.1.2"
authors = ["Michal Buczko <michal.buczko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
rusqlite = {version = "0.21.0", features = ["bundled", "array"]}
rust-embed = "5.2.0"
semver = "0.9.0"
sha1 = "0.6.0"
log = "0.4.8"
simple_logger = "1.5.0"
rpassword = "4.0.5"
bcrypt = "0.6.1"
miniserde = "0.1.12"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
